# SchNet-vdW

./: .gitignore  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/scripts/: Lindh.py  Lindh_ASE_preconditioner.py  run_ml_pred.py  run_ml_pred_new.py  submit.sh
src/spk_vdw/: .qmme.py.swp  __init__.py  build_options_sdc  build_options_sdc_gnu  dftdisp.py  dispcorr.py  dispcorr_mixedbasis.py  mbd.py  mbdio.py  qmme.py  sdc_recode.f90  spk_vdw_interface.py  spk_vdw_interface2.py  spk_vdw_qbc_interface.py
src/spk_vdw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: 50.in  B2O.in  parameters.ase  qbc_au.sh  qbc_bh.sh  test_libmbd.py  test_mbdcalc.py  test_mbdcalc_gradients.py  test_mbdcalc_lattgrad.py  test_mbdcalc_ts.py  test_ml.py  test_ml.sh  test_ml_au  test_ml_au.sh  test_ml_auc.py  test_ml_d3.py  test_ml_dftd3-4.sh  test_ml_x2o.py  test_ml_x2o.sh  test_qbcml_auc.py
tests/MLModels/Au_C/EF/: args.json  best_model  evaluation.csv  split.npz  tradeoffs.yaml
tests/MLModels/Au_C/EF/Model1/: args.json  best_model  split.npz
tests/MLModels/Au_C/EF/Model2/: args.json  best_model  split.npz
tests/MLModels/Au_C/EF/Model3/: args.json  best_model  split.npz
tests/MLModels/Au_C/H/: args.json  best_model  split.npz  tradeoffs.yaml
tests/MLModels/Au_C/Hirshfeld/: best_model  evaluation.csv
tests/MLModels/X2O/EF/: args.json  best_model  split.npz  tradeoffs.yaml
tests/MLModels/X2O/Hirshfeld/: args.json  best_model  split.npz
tests/OptAuC/: local_minima.traj  lowest.traj  opt.traj
tests/OptX2O/: opt.traj
(+42 files in other folders)
