[metadata]
name = spk_vdw
version = 0.0.0
author = Julia Westermayr and Reinhard Maurer
author_email = julia.westermayr@warwick.ac.uk
description = spk vdw
long_description = file: README.rst
long_description_content_type = text/markdown

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
